refactor: 商品追加機能を実装
